--- a/.github/workflows/sampletest.yml
+++ b/.github/workflows/sampletest.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macos-latest-large]
+        os: [macos-latest-large,macos-latest,ubuntu-latest,windows-latest]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
