--- a/.github/workflows/sampletest.yml
+++ b/.github/workflows/sampletest.yml
@@ -7,6 +7,7 @@ jobs:
   build:
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
         os: [macos-latest-large,macos-latest,ubuntu-latest,windows-latest]
     steps:
