--- a/.github/workflows/A_Generic.yml
+++ b/.github/workflows/A_Generic.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ['macos-12', 'macos-13', 'macos-13-xlarge', 'macos-14', 'macos-14-large']
+        os: ['macos-12', 'macos-13', 'macos-14']
         
     runs-on: ${{ matrix.os }}
 
