--- a/.github/workflows/A_Generic.yml
+++ b/.github/workflows/A_Generic.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ['macos-12', 'macos-13', 'macos-14']
+        os: ['macos-12', 'macos-13', 'macos-14-large']
         
     runs-on: ${{ matrix.os }}
 
@@ -18,3 +18,21 @@ jobs:
       run: |
         cd /Applications/
         ls -ltr
+
+    - name: Install Parallels
+      shell: bash
+      run: |
+        brew install --cask parallels
+        brew install --cask parallels-virtualization-sdk
+
+    - name: Validate Kernel extension
+      run: |
+        MAX_RETRIES=2
+        RETRY_COUNT=0
+        until [ $RETRY_COUNT -ge $MAX_RETRIES ]
+        do
+          sudo kextload /Applications/Parallels\ Desktop.app/Contents/Library/Extensions/10.9/prl_hypervisor.kext && break
+          RETRY_COUNT=$((RETRY_COUNT+1))
+          echo "Waiting before retrying..."
+          sleep 5
+        done
